# i3-status-rs

./: Cargo.toml  LICENSE  README.md
src/: byte_count.rs  main.rs  mpris.rs
