[package]
name = "i3-status-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
serde = { version = "1.0.165", features = [ "derive" ]}
serde_json = "1.0"
tokio = { version = "1.29.1", features = [ "rt", "macros", "time", "sync", "io-std", "io-util" ]}
sysinfo = "0.29.3"
dbus = "0.9.7"
dbus-tokio = "0.7.6"
